--- a/microservice-arch/yml/2048.yml
+++ b/microservice-arch/yml/2048.yml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: game2048
+  labels:
+    app: game2048
 spec:
   replicas: 1
   selector:
@@ -13,10 +15,13 @@ spec:
         app: game2048
     spec:
       containers:
-      - name: game2048
-        image: tejubagalad/playhive-2048:latest
-        ports:
-        - containerPort: 80
+        - name: game2048
+          image: tejubagalad/playhive-auto-2048:latest
+          ports:
+            - containerPort: 80
+          imagePullPolicy: Always
+      imagePullSecrets:
+        - name: dockerhub-creds
 ---
 apiVersion: v1
 kind: Service
@@ -29,4 +34,3 @@ spec:
   ports:
     - port: 80
       targetPort: 80
-  
