--- a/microservice-arch/yml/ingress.yml
+++ b/microservice-arch/yml/ingress.yml
@@ -3,10 +3,12 @@ kind: Ingress
 metadata:
   name: gamehub-ingress
   annotations:
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
-    - host: gamehub.local
+    - host: playhive.cloudapp.azure.com  # optional: replace with your domain or remove host to use IP
       http:
         paths:
           - path: /
@@ -16,24 +18,17 @@ spec:
                 name: gamehub-service
                 port:
                   number: 80
-    - host: snake.gamehub.local
-      http:
-        paths:
-          - path: /
+          - path: /snake
             pathType: Prefix
             backend:
               service:
                 name: snake-service
                 port:
                   number: 80
-    - host: 2048.gamehub.local
-      http:
-        paths:
-          - path: /
+          - path: /2048
             pathType: Prefix
             backend:
               service:
                 name: game2048-service
                 port:
                   number: 80
-
