--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -57,6 +57,6 @@ jobs:
         run: |
           echo "Triggering FluxCD reconciliation..."
           curl -X POST -H "Accept: application/vnd.github+json" \
-               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+               -H "Authorization: token ${{ secrets.TOKEN }}" \
                https://api.github.com/repos/${{ github.repository }}/dispatches \
                -d '{"event_type": "flux-sync"}'
