--- a/microservice-arch/yml/2048.yml
+++ b/microservice-arch/yml/2048.yml
@@ -2,8 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: game2048
-  labels:
-    app: game2048
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -19,14 +18,12 @@ spec:
           image: tejubagalad/playhive-auto-2048:latest
           ports:
             - containerPort: 80
-          imagePullPolicy: Always
-      imagePullSecrets:
-        - name: dockerhub-creds
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: game2048-service
+  namespace: default
 spec:
   selector:
     app: game2048
