fixed other 2 ymls

--- a/microservice-arch/yml/snake.yml
+++ b/microservice-arch/yml/snake.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: snake
+  namespace: default # 👈 ADD THIS LINE
   labels:
     app: snake
 spec:
