--- a/microservice-arch/yml/ingress.yml
+++ b/microservice-arch/yml/ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: gamehub-ingress
+  name: playhive-ingress
   namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -9,7 +9,9 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - http:
+    # GameHub (main app)
+    - host: playhive.cloudapp.azure.com
+      http:
         paths:
           - path: /
             pathType: Prefix
@@ -18,14 +20,24 @@ spec:
                 name: gamehub-service
                 port:
                   number: 80
-          - path: /snake
+
+    # Snake subdomain
+    - host: snake.playhive.cloudapp.azure.com
+      http:
+        paths:
+          - path: /
             pathType: Prefix
             backend:
               service:
                 name: snake-service
                 port:
                   number: 80
-          - path: /2048
+
+    # 2048 subdomain
+    - host: game2048.playhive.cloudapp.azure.com
+      http:
+        paths:
+          - path: /
             pathType: Prefix
             backend:
               service:
