--- a/microservice-arch/gamehub-microarch/TwentyFortyEight/dockerfile
+++ b/microservice-arch/gamehub-microarch/TwentyFortyEight/dockerfile
@@ -1,10 +1,16 @@
-# Dockerfile
-FROM node:22-alpine AS builder
+# ---------- Stage 1: Build ----------
+FROM node:18-alpine AS build
 WORKDIR /app
+COPY package*.json ./
+RUN npm ci
 COPY . .
-RUN npm install && npm run build
+RUN npm run build
 
-FROM nginx:alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
+# ---------- Stage 2: Serve ----------
+FROM nginx:1.25-alpine
+# Remove default nginx HTML
+RUN rm -rf /usr/share/nginx/html/*
+COPY --from=build /app/dist /usr/share/nginx/html
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
