--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -17,46 +17,46 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build & Push GameHub App Image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: ./microservice-arch/gamehub-microarch/app
           file: ./microservice-arch/gamehub-microarch/app/Dockerfile
           push: true
+          no-cache: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/playhive-auto-app:latest
 
       - name: Build & Push Snake Image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: ./microservice-arch/gamehub-microarch/SnakeGame
           file: ./microservice-arch/gamehub-microarch/SnakeGame/Dockerfile
           push: true
+          no-cache: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/playhive-auto-snake:latest
 
       - name: Build & Push 2048 Image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
-          context: ./microservice-arch/gamehub-microarch/TwentyFortyEight/
+          context: ./microservice-arch/gamehub-microarch/TwentyFortyEight
           file: ./microservice-arch/gamehub-microarch/TwentyFortyEight/Dockerfile
           push: true
+          no-cache: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/playhive-auto-2048:latest
 
-      # ✅ Trigger Flux to reconcile AKS (GitOps sync)
-      - name: Trigger FluxCD Sync
+      - name: Trigger FluxCD Reconciliation
         run: |
-          echo "Triggering FluxCD reconciliation..."
-          curl -X POST -H "Accept: application/vnd.github+json" \
-               -H "Authorization: token ${{ secrets.TOKEN }}" \
-               https://api.github.com/repos/${{ github.repository }}/dispatches \
-               -d '{"event_type": "flux-sync"}'
+          echo "Reconciling FluxCD with latest GitHub state..."
+          flux reconcile source git flux-system
+          flux reconcile kustomization flux-system --with-source
