--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,4 +1,4 @@
-name: CI/CD for PlayHive Microservices (Kubeconfig Auth + Auto-Rollout)
+name: CI/CD for PlayHive Microservices (Lightweight + Auto Ingress Fix)
 
 on:
   push:
@@ -16,18 +16,22 @@ jobs:
       contents: read
 
     steps:
+      # 1️⃣ Checkout Repository
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # 3️⃣ Login to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # 4️⃣ Build & Push GameHub Image
       - name: Build & Push GameHub Image
         uses: docker/build-push-action@v5
         with:
@@ -37,6 +41,7 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/playhive-auto-app:latest
 
+      # 5️⃣ Build & Push Snake Image
       - name: Build & Push Snake Image
         uses: docker/build-push-action@v5
         with:
@@ -46,6 +51,7 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/playhive-auto-snake:latest
 
+      # 6️⃣ Build & Push 2048 Image
       - name: Build & Push 2048 Image
         uses: docker/build-push-action@v5
         with:
@@ -55,6 +61,7 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/playhive-auto-2048:latest
 
+      # 7️⃣ Configure Kubeconfig
       - name: Set up kubeconfig
         run: |
           mkdir -p ~/.kube
@@ -62,26 +69,51 @@ jobs:
           chmod 600 ~/.kube/config
           kubectl config current-context
 
+      # 8️⃣ Ensure Ingress Controller Runs (Auto Fix)
+      - name: 🧩 Ensure Ingress Controller is Running
+        run: |
+          echo "🔍 Checking ingress controller status..."
+          if ! kubectl get pods -n ingress-basic 2>/dev/null | grep -q "Running"; then
+            echo "⚙️ Ingress not running — attempting lightweight fix..."
+
+            # Reduce resource usage dynamically to prevent CPU/memory errors
+            kubectl patch deployment nginx-ingress-ingress-nginx-controller -n ingress-basic \
+              -p '{"spec":{"template":{"spec":{"containers":[{"name":"controller","resources":{"requests":{"cpu":"50m","memory":"64Mi"},"limits":{"cpu":"100m","memory":"128Mi"}}}]}}}}' || true
+
+            # Restart ingress deployment
+            kubectl rollout restart deployment nginx-ingress-ingress-nginx-controller -n ingress-basic || true
+
+            # Wait until ingress is available
+            kubectl wait --for=condition=available deployment/nginx-ingress-ingress-nginx-controller -n ingress-basic --timeout=180s || true
+            echo "✅ Ingress controller is ready now."
+          else
+            echo "✅ Ingress controller already running."
+          fi
+
+      # 9️⃣ Install Flux CLI
       - name: Install Flux CLI
         run: |
           curl -s https://fluxcd.io/install.sh | bash
           export PATH=$PATH:/usr/local/bin
           flux --version
 
+      # 🔟 Trigger FluxCD Reconciliation
       - name: Trigger FluxCD Reconciliation
         run: |
           echo "🔁 Reconciling FluxCD..."
           flux reconcile source git flux-system
           flux reconcile kustomization flux-system --with-source
 
+      # 1️⃣1️⃣ Restart App Deployments (Always Latest Image)
       - name: Force Pod Rollout Restart
         run: |
-          echo "♻️ Restarting deployments to pull latest images..."
+          echo "♻️ Restarting deployments..."
           kubectl rollout restart deployment gamehub -n default || true
           kubectl rollout restart deployment snake -n default || true
           kubectl rollout restart deployment game2048 -n default || true
-          echo "✅ Deployments restarted successfully!"
+          echo "✅ Deployments restarted successfully."
 
+      # 1️⃣2️⃣ Verify Application Health
       - name: Verify Deployment (Pods + App Health)
         run: |
           echo "🧩 Checking pod statuses..."
