--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,4 +1,4 @@
-name: CI/CD for PlayHive Microservices (Resilient + Auto Heal)
+name: CI/CD for PlayHive Microservices (Lightweight + Auto Ingress Fix)
 
 on:
   push:
@@ -68,8 +68,9 @@ jobs:
           echo "${{ secrets.KUBECONFIG_DATA }}" | base64 -d > ~/.kube/config
           chmod 600 ~/.kube/config
           kubectl config current-context
+              # 🕓 Wait for AKS API Server to Be Reachable
 
-      # 8️⃣ Wait for AKS API to be reachable (after cluster restart)
+
       - name: Wait for AKS Cluster API
         run: |
           echo "⏳ Waiting for AKS cluster API to become ready..."
@@ -83,7 +84,7 @@ jobs:
             fi
           done
 
-      # 9️⃣ Ensure Ingress Controller is Running
+
       - name: 🧩 Ensure Ingress Controller is Running
         run: |
           echo "🔍 Checking ingress controller status..."
@@ -104,15 +105,14 @@ jobs:
             echo "✅ Ingress controller already running."
           fi
 
-      # 🔟 Install Flux CLI
+      # 9️⃣ Install Flux CLI
       - name: Install Flux CLI
         run: |
           curl -sL https://fluxcd.io/install.sh | bash
           export PATH=$PATH:/usr/local/bin
           flux --version
 
-      # 1️⃣1️⃣ Wait for Flux CRDs to Be Ready
-      - name: Wait for Flux CRDs to Be Ready
+      - name: Wait for Flux CRDs to be Ready
         run: |
           echo "🧠 Waiting for Flux components..."
           for i in {1..10}; do
@@ -125,10 +125,16 @@ jobs:
             fi
           done
 
-      # 1️⃣2️⃣ Check and Reconcile Flux if Drift Detected
+
+      # 🔟 Trigger FluxCD Reconciliation
+      - name: Trigger FluxCD Reconciliation
+        run: |
+          echo "🔁 Reconciling FluxCD..."
+          flux reconcile source git flux-system
+          flux reconcile kustomization flux-system --with-source
+          
       - name: Check and Reconcile Flux if Drift Detected
         run: |
-          echo "🔁 Checking Flux sync state..."
           if ! flux get kustomizations | grep -q "Ready"; then
             echo "⚠️ Drift detected — reconciling..."
             flux reconcile source git flux-system
@@ -137,32 +143,25 @@ jobs:
             echo "✅ Flux is already in sync."
           fi
 
-      # 1️⃣3️⃣ Smart Restart (Only If Image Changed)
-      - name: Smart Restart (Only if Image Updated)
-        run: |
-          for dep in gamehub snake game2048; do
-            echo "🔍 Checking image for $dep..."
-            CURRENT_IMAGE=$(kubectl get deployment $dep -o jsonpath='{.spec.template.spec.containers[0].image}' || true)
-            if [[ "$CURRENT_IMAGE" == *":latest"* ]]; then
-              echo "♻️ Restarting $dep to pull new image..."
-              kubectl rollout restart deployment $dep || true
-            else
-              echo "✅ $dep is already up-to-date."
-            fi
-          done
 
-      # 1️⃣4️⃣ Verify Application Health (Dynamic Ingress IP)
+      # 1️⃣1️⃣ Restart App Deployments (Always Latest Image)
+      - name: Force Pod Rollout Restart
+        run: |
+          echo "♻️ Restarting deployments..."
+          kubectl rollout restart deployment gamehub -n default || true
+          kubectl rollout restart deployment snake -n default || true
+          kubectl rollout restart deployment game2048 -n default || true
+          echo "✅ Deployments restarted successfully."
+
+      # 1️⃣2️⃣ Verify Application Health
       - name: Verify Deployment (Pods + App Health)
         run: |
           echo "🧩 Checking pod statuses..."
           kubectl get pods -n default
           echo "🌐 Verifying app endpoints..."
-          INGRESS_IP=$(kubectl get ingress gamehub-ingress -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-          echo "Detected Ingress IP: $INGRESS_IP"
           for path in "" "snake/" "2048/"; do
-            APP_URL="http://$INGRESS_IP/$path"
-            echo "Testing $APP_URL"
-            if curl -I -s -o /dev/null -w "%{http_code}" $APP_URL | grep -q 200; then
+            echo "Testing http://playhive.southindia.cloudapp.azure.com/$path"
+            if curl -I -s -o /dev/null -w "%{http_code}" http://playhive.southindia.cloudapp.azure.com/$path | grep -q 200; then
               echo "✅ $path reachable"
             else
               echo "❌ $path failed to respond"; exit 1
